--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -32,6 +32,7 @@ collections:
       - { label: "Featured Image", name: "featuredimage", widget: image }
       - { label: "Body", name: "body", widget: "markdown" }
       - { label: "Tags", name: "tags", widget: "list" }
+      - { label: "Precio", name: "price", widget: "int" }
 
   - name: "pages"
     label: "Pages"
